# ome-hackathon-season-14

./: .dockerignore  .gitignore  .pre-commit-config.yaml  API_QUICKSTART.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PROTOCOLE_EXTRACTION_MOTS_CLES.md  README-subject.md  README.md  app.py  docker-compose.yaml  docker-compose.yml  explo.ipynb  explo_NER_clara.ipynb  process_and_export.py  pyproject.toml  report.md  requirements.txt  scoring.py  setup.sh  streamlit_app.py
acteur/: deduplication.py  deduplication_demo.ipynb  explo.ipynb  ner_agriculture.ipynb
analysis/: analysis.ipynb
analysis/datasets/: processed_results.csv
anotation_model/: classif.ipynb  classify_productiviste.py  prepare_agri_data.py
anotation_model/data/: nouns_in_keywords.json
api/: Dockerfile  README.md  __init__.py  classification.py  config.py  deduplication.py  main.py  test_api.py
api/database/: logs.py  models.py
cli/: README.md  config.py  deduplication.py  main.py  test_api.py
cli/database/: __init__.py  (+1 more)
common/: logs.py
dataset/: explore.py  train_agriculture_with_sentiment.csv  train_agriculture_with_sentiment.parquet
examples/: README.md  example_usage.py
final/: Dockerfile  cleaning.py  data_prep.py  input_text.txt  interface.py  main.py  orchestrator.py  scoring.py  segment.py  segment_dataset.py
frontend/: index.html
inference/: Dockerfile  README.md  __init__.py  database_connection.py  models.py  predict.py
key-words/: Dockerfile  api.py  key-words.py  main.py
main/: __init__.py  main.py
ner/: Dockerfile  README.md  api.py
nlp_notebooks/: explo.ipynb  explo_NER_clara.ipynb
placeholder/: Dockerfile  category_scoring.py  orchestrator.py  segment.py
preprocessing/: __init__.py
processing/: cleaning.py  interface.py  segment.py
scripts/: data_viz_app.py  download_dataset.py
sentiment/: Dockerfile  README.md  api.py  sentiment_analysis.py
test/: test_api.py
train/: Dockerfile  train.py
(+16 files in other folders)
