[project]
name = "ome-hackathon-season-14"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=2.0.0",
    "huggingface-hub>=1.3.3",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "skimpy>=0.0.20",
    "sqlalchemy>=2.0.46",
]
