[project]
name = "ome-hackathon-season-14"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.0.0",
    "huggingface-hub>=1.3.3",
    "httpx>=0.27.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "protobuf>=6.33.4",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.0",
    "pysentimiento>=0.7.3",
    "rake-nltk>=1.0.6",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "skimpy>=0.0.20",
    "sentencepiece>=0.2.1",
    "sqlalchemy>=2.0.46",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "transformers>=5.0.0rc3",
    "fastapi[standard]>=0.128.0",
    "uvicorn>=0.40.0",
]
